# qapla-engine-tester

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  engines.ini  epd_result.txt  parameter examples.txt  qapla-engine-tester.sln  qapla-engine-tester.vcxproj  qapla-engine-tester.vcxproj.filters  sprtRes.ods
.github/workflows/: codeql.yml
enc_temp_folder/d035ea3d7359e4cc4c13ad5863f56ea7/: uci-adpater.cpp
src/: app-error.h  bitboardmasks.cpp  bitboardmasks.h  bits.h  board.cpp  board.h  boardstate.h  checklist.cpp  checklist.h  cli-settings-manager.cpp  cli-settings-manager.h  elo-helper.h  engine-adapter-factory.cpp  engine-adapter-factory.h  engine-adapter.cpp  engine-adapter.h  engine-checklist.h  engine-config-manager.cpp  engine-config-manager.h  engine-config.cpp  engine-config.h  engine-event.h  engine-group.h  engine-option.h  engine-process.cpp  engine-process.h  engine-report.cpp  engine-report.h  engine-test-controller.cpp  engine-test-controller.h  engine-worker-factory.cpp  engine-worker-factory.h  engine-worker.cpp  engine-worker.h  epd-manager.cpp  epd-manager.h  epd-reader.cpp  epd-reader.h  epd-test-manager.h  evalvalue.h  (+62 more)
test/: Qapla0.3.0-linux-x86  Qapla0.3.1-linux-x86  Qapla0.3.2-linux-x86  book8ply.raw  compare-sprt-spike14.ini  debug.ini  engines.ini  gauntlet-tournament.ini  linux-engines.ini  parameter examples.txt  sprt-ponder.ini  test-20-games.ini  test-epd-13.ini  test-error-10-stop.ini  test-error-11.ini  test-error-ponder.ini  test-gauntlet.ini  test-noerror.ini  test-spike.ini  test-sprt-14-ponder.ini  test-sprt-14.ini  test-sprt-15.ini  test-sprt-fast.ini  test-sprt-maxgames.ini  test-sprt-rapid.ini  test-sprt-spike-ponder.ini  test-sprt-spike.ini  test-tournament-file.ini  test.ps1  test.sh  wmtest.epd
